[gd_scene load_steps=2 format=3 uid="uid://b25blksts531e"]

[ext_resource type="Script" path="res://Scenes/GameScenes/MainMenu/MainMenu.gd" id="1_kr5jv"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kr5jv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="MenuPositions" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Title" type="RichTextLabel" parent="MarginContainer/MenuPositions"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center]asdasdawd[/center]"
fit_content = true
scroll_active = false

[node name="PlayButton" type="Button" parent="MarginContainer/MenuPositions"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 80
action_mode = 0
text = "Play!"

[connection signal="pressed" from="MarginContainer/MenuPositions/PlayButton" to="." method="on_play_button_press"]
